chore: remove unnecessary files.

--- a/.gitignore
+++ b/.gitignore
@@ -332,3 +332,18 @@ ASALocalRun/
 *.DS_Store
 
 out
+.vscode/launch.json
+
+# VS Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
