--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   app:
     build: 
-      context: .
+      context: ./node
     container_name: app
     entrypoint: dockerize -wait tcp://db:3306 -timeout 20s node index.js
     networks: 
@@ -12,8 +12,6 @@ services:
     volumes: 
       - ./node:/usr/src/app
     tty: true
-    ports: 
-      - "3000:3000"
     depends_on: 
        - db
 
@@ -30,6 +28,17 @@ services:
       - MYSQL_ROOT_PASSWORD=root
     networks: 
       - node-network
+  
+  nginx:
+    build: 
+      context: ./nginx
+    container_name: nginx
+    networks: 
+      - node-network
+    ports: 
+      - "8080:80"
+    depends_on: 
+      - app
 
 networks: 
   node-network:
